--- a/css/index.css
+++ b/css/index.css
@@ -231,23 +231,47 @@ footer nav a {
 }
 
 
-/*about*/
+/*about xtra*/
 
 
 #main {
     width: 800px;
     margin: 0 auto;
+    padding-right: 0;
+
 }
 
 #main #sub{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+
 }
 
 #main .quad {
     width: 40%;
     border-bottom: 1px dashed black;
+    flex-grow: 2;
+    padding-bottom: 3%;
 
+}
+
+#main .quad.bottom{
+    padding-top: 3%;
+}
+
+#main .quad h2 {
+    margin-top: 5px;
+}
+
+#main .quad a {
+    text-decoration: none;
+    border: 2px solid black;
+    border-radius: 8%;
+    padding: 2% 4%;
+    color: black;
+}
+
+#text-bottom {
+    padding: 4% 0;
 }
